# ChangeLog for dev-libs/confuse
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/confuse/ChangeLog,v 1.39 2008/12/17 22:09:10 maekke Exp $

  01 Aug 2009; Nathan Brink <ohnobinki@gentoo.org> +confuse-2.6-r4.ebuild,
  +files/confuse-2.6-relativeincludes.patch:
  Added relative includes patch

  28 Feb 2009; Nathan Phillip Brink <ohnobinki@ohnopublishing.net> -confuse-2.6.ebuild, -confuse-2.6-r2.ebuild, 
  Initial import into ohnobinki_overlay from Gentoo Portage, disabled building of non-installed/unused examples to support crosscompiling to mingw32
	
  17 Dec 2008; Markus Meier <maekke@gentoo.org> confuse-2.6-r3.ebuild:
  amd64 stable, bug #246143

  10 Dec 2008; Jeroen Roovers <jer@gentoo.org> confuse-2.6-r3.ebuild:
  Stable for HPPA (bug #246143).

  09 Dec 2008; Raúl Porcel <armin76@gentoo.org> confuse-2.6-r3.ebuild:
  alpha/ia64/sparc/x86 stable wrt #246143

  08 Dec 2008; Brent Baude <ranger@gentoo.org> confuse-2.6-r3.ebuild:
  stable ppc64, bug 246143

  06 Dec 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  confuse-2.6-r3.ebuild:
  ppc stable, bug #246143

*confuse-2.6-r3 (30 Sep 2008)

  30 Sep 2008; MATSUU Takuto <matsuu@gentoo.org>
  +files/confuse-2.6-solaris.patch, -confuse-2.6-r1.ebuild,
  +confuse-2.6-r3.ebuild:
  Fixed test building on OpenSolaris issue, bug #239020.

*confuse-2.6-r2 (15 Sep 2008)

  15 Sep 2008; MATSUU Takuto <matsuu@gentoo.org>
  +files/confuse-2.6-O0.patch, +confuse-2.6-r2.ebuild:
  Fixed optimization issue, bug #236347.

  17 May 2008; MATSUU Takuto <matsuu@gentoo.org>
  -files/confuse-2.5-libintl.patch, -files/confuse-2.5-maketest.patch,
  -confuse-2.5.ebuild, confuse-2.6.ebuild, confuse-2.6-r1.ebuild:
  Added sys-devel/flex to DEPEND, bug #221379.
  Removed old version.

  12 May 2008; Markus Meier <maekke@gentoo.org> confuse-2.6.ebuild:
  amd64 stable, bug #217815

  17 Apr 2008; nixnut <nixnut@gentoo.org> confuse-2.6.ebuild:
  Stable on ppc wrt bug 217815
