@@ -4,6 +4,6 @@ AUX confuse-2.6-relativeincludes.patch 1562 RMD160 099b59694450e377fe057bed1b615
 AUX confuse-2.6-solaris.patch 572 RMD160 e43927f1688fb99e283d919b4d6f7bce7de18bb2 SHA1 bbe8a4071c8961b965cd37f2ce9b295ff17129dc SHA256 00dc757a617db9fc5832ec4435ef581b49286621cf300a89b318151a1bfd15c5
 DIST confuse-2.6.tar.gz 504017 RMD160 11f987089c533573482a427c7ad2ae8e155389b7 SHA1 e9e5510abf1eb3159a6439fd52aa5cec94811aff SHA256 e8d653159b152f3850a7224b3eb604955795dbd3fd6603816ee46411ea53e84a
 EBUILD confuse-2.6-r3.ebuild 1191 RMD160 033c7062f7ce617aef42b19294c1024b3af138f9 SHA1 91574a27afc4cd0d5a31d0e777089c01951daf11 SHA256 7c1b910922cac96acfaa0a90eab55661071dcc382ffcb9529ae7730e74afb5c7
-EBUILD confuse-2.6-r4.ebuild 1581 RMD160 37c99b72457bc2a9cbd1fb68d73f8f049eef0859 SHA1 5a39c860d218363d6f35a7e1f1f57b65d6a98199 SHA256 9af50fa8d4d0aecdbed609be27110206d0be934f9f83ca2800a168cb008935ca
-MISC ChangeLog 5315 RMD160 2ac751fcab57d0de0e2ddc30201c09f5fb40e783 SHA1 8f827df311f972601a6144339f51bb8cf52355c1 SHA256 c159c0360277a8ab10e5af1bb1746d0b9661a4d3ecbc7a9a1abb5295f3aa1d58
+EBUILD confuse-2.6-r4.ebuild 1648 RMD160 dceb82a73044d736895971785a03a09b01aa31a2 SHA1 492467e1a504c600986fccc0673d0b79c66c30d2 SHA256 ece418ea41998baca1cbfa3224405d892730974ac420c200bc421f783035b680
+MISC ChangeLog 5422 RMD160 b78a30efeef620a2c606c41a26ea04fb7f2fdbe7 SHA1 d2325f74c1a0a06dc9aed2dd7a9b4e3417a0a4a7 SHA256 1d8b7931cfe0cdec4ed980844027f3d4d5da799930ec0aae1e21d18ffe8452d8
 MISC metadata.xml 222 RMD160 23efe87c16ebc9fbeb91e894ab372cc3bb66bc49 SHA1 a5d1e2317ae207bbd664aebe986687948fdd984a SHA256 38ef3457fd14e6872985f0e100fde79d0b8a9dbc4fc39ceef780c8c5abc5f337
