@@ -2,6 +2,9 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/dev-libs/confuse/ChangeLog,v 1.39 2008/12/17 22:09:10 maekke Exp $
 
+  03 Aug 2009; Nathan Brink <ohnobinki@gentoo.org> confuse-2.6-r4.ebuild:
+  Force regeneration of flex.c.
+
   01 Aug 2009; Nathan Brink <ohnobinki@gentoo.org> +confuse-2.6-r4.ebuild,
   +files/confuse-2.6-relativeincludes.patch:
   Added relative includes patch
